<resources>
    <string name="app_name">Güedr</string>
    <string name="hi">Hellow Juanito</string>
    <string name="stone_button">sistema piedra</string>
    <string name="donkey_button">Sistema burro</string>
    <string name="forecast_image_description">imagen del tiempo</string>

    <string name="max_temp_format">Temp. Máxima: %.2f %s</string>
    <string name="min_temp_format">Temp. Mínima: %.2f %s</string>
    <string name="humidity_format">Humedad: %.0f %%</string>
    <string name="enter_units">Elige las unidades de temperatura:</string>
    <string name="celsius_unit">celsius</string>
    <string name="farenheit_unit">farenheit</string>
    <string name="settings">ajustes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
