...
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_above="@id/forecast_description"
        android:background="#FABADA"
        android:orientation="vertical">

        <TextView
            android:id="@+id/max_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            tools:text="Temperatura máxima 25C"/>"
        <TextView
            android:id="@+id/min_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            tools:text="Temperatura mínima 5C"/>"
        <TextView
            android:id="@+id/humidity"
...
